# traintap

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
dashboard/: Dockerfile  aggregate.py  app.py  speed.py
dashboard/static/: app.js  index.html  style.css
dashboard/tests/: test_aggregate.py  test_speed.py
scripts/: backfill_signal.py
tests/: test_dsp.py  test_frame.py  test_output.py  test_scanplan.py
traintap/: __init__.py  capture.py  cli.py  dsp.py  frame.py  output.py
